; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_export.c_svc_expkey_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_export.c_svc_expkey_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_expkey = type { i32, i32, i64 }

@EXPKEY_HASHBITS = common dso_local global i32 0, align 4
@EXPKEY_HASHMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.svc_expkey*)* @svc_expkey_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @svc_expkey_hash(%struct.svc_expkey* %0) #0 {
  %2 = alloca %struct.svc_expkey*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.svc_expkey* %0, %struct.svc_expkey** %2, align 8
  %6 = load %struct.svc_expkey*, %struct.svc_expkey** %2, align 8
  %7 = getelementptr inbounds %struct.svc_expkey, %struct.svc_expkey* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  store i32 %8, i32* %3, align 4
  %9 = load %struct.svc_expkey*, %struct.svc_expkey** %2, align 8
  %10 = getelementptr inbounds %struct.svc_expkey, %struct.svc_expkey* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %4, align 8
  %13 = load %struct.svc_expkey*, %struct.svc_expkey** %2, align 8
  %14 = getelementptr inbounds %struct.svc_expkey, %struct.svc_expkey* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @key_len(i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @EXPKEY_HASHBITS, align 4
  %20 = call i32 @hash_mem(i8* %17, i32 %18, i32 %19)
  %21 = load i32, i32* %3, align 4
  %22 = xor i32 %21, %20
  store i32 %22, i32* %3, align 4
  %23 = load %struct.svc_expkey*, %struct.svc_expkey** %2, align 8
  %24 = getelementptr inbounds %struct.svc_expkey, %struct.svc_expkey* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @EXPKEY_HASHBITS, align 4
  %27 = call i32 @hash_ptr(i32 %25, i32 %26)
  %28 = load i32, i32* %3, align 4
  %29 = xor i32 %28, %27
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* @EXPKEY_HASHMASK, align 4
  %31 = load i32, i32* %3, align 4
  %32 = and i32 %31, %30
  store i32 %32, i32* %3, align 4
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @key_len(i32) #1

declare dso_local i32 @hash_mem(i8*, i32, i32) #1

declare dso_local i32 @hash_ptr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
